src/parser/antlr/SimpleSqlParser.cpp

// Generated from /mnt/d/Program/Ubuntu/SQL-Engine-On-LSM/antlr4/SimpleSql.g4 by ANTLR 4.7.2


#include "SimpleSqlVisitor.h"

#include "SimpleSqlParser.h"


using namespace antlrcpp;
using namespace simplesql::parser::antlr;
using namespace antlr4;

SimpleSqlParser::SimpleSqlParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SimpleSqlParser::~SimpleSqlParser() {
  delete _interpreter;
}

std::string SimpleSqlParser::getGrammarFileName() const {
  return "SimpleSql.g4";
}

const std::vector<std::string>& SimpleSqlParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SimpleSqlParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- SingleStatementContext ------------------------------------------------------------------

SimpleSqlParser::SingleStatementContext::SingleStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleSqlParser::StatementContext* SimpleSqlParser::SingleStatementContext::statement() {
  return getRuleContext<SimpleSqlParser::StatementContext>(0);
}

tree::TerminalNode* SimpleSqlParser::SingleStatementContext::EOF() {
  return getToken(SimpleSqlParser::EOF, 0);
}


size_t SimpleSqlParser::SingleStatementContext::getRuleIndex() const {
  return SimpleSqlParser::RuleSingleStatement;
}


antlrcpp::Any SimpleSqlParser::SingleStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitSingleStatement(this);
  else
    return visitor->visitChildren(this);
}

SimpleSqlParser::SingleStatementContext* SimpleSqlParser::singleStatement() {
  SingleStatementContext *_localctx = _tracker.createInstance<SingleStatementContext>(_ctx, getState());
  enterRule(_localctx, 0, SimpleSqlParser::RuleSingleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(48);
    statement();
    setState(49);
    match(SimpleSqlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SimpleSqlParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SimpleSqlParser::StatementContext::getRuleIndex() const {
  return SimpleSqlParser::RuleStatement;
}

void SimpleSqlParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- InsertValueStatementContext ------------------------------------------------------------------

SimpleSqlParser::InsertStatementContext* SimpleSqlParser::InsertValueStatementContext::insertStatement() {
  return getRuleContext<SimpleSqlParser::InsertStatementContext>(0);
}

SimpleSqlParser::InsertValueStatementContext::InsertValueStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SimpleSqlParser::InsertValueStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitInsertValueStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DeleteValueStatementContext ------------------------------------------------------------------

SimpleSqlParser::DeleteStatementContext* SimpleSqlParser::DeleteValueStatementContext::deleteStatement() {
  return getRuleContext<SimpleSqlParser::DeleteStatementContext>(0);
}

SimpleSqlParser::DeleteValueStatementContext::DeleteValueStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SimpleSqlParser::DeleteValueStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitDeleteValueStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CreateTableStatementContext ------------------------------------------------------------------

SimpleSqlParser::CreateStatementContext* SimpleSqlParser::CreateTableStatementContext::createStatement() {
  return getRuleContext<SimpleSqlParser::CreateStatementContext>(0);
}

SimpleSqlParser::CreateTableStatementContext::CreateTableStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SimpleSqlParser::CreateTableStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitCreateTableStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- QueryStatementContext ------------------------------------------------------------------

SimpleSqlParser::SelectStatementContext* SimpleSqlParser::QueryStatementContext::selectStatement() {
  return getRuleContext<SimpleSqlParser::SelectStatementContext>(0);
}

SimpleSqlParser::QueryStatementContext::QueryStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SimpleSqlParser::QueryStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitQueryStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CopyFileStatementContext ------------------------------------------------------------------

SimpleSqlParser::CopyStatementContext* SimpleSqlParser::CopyFileStatementContext::copyStatement() {
  return getRuleContext<SimpleSqlParser::CopyStatementContext>(0);
}

SimpleSqlParser::CopyFileStatementContext::CopyFileStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SimpleSqlParser::CopyFileStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitCopyFileStatement(this);
  else
    return visitor->visitChildren(this);
}
SimpleSqlParser::StatementContext* SimpleSqlParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, SimpleSqlParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(56);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SimpleSqlParser::CREATE: {
        _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<SimpleSqlParser::CreateTableStatementContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(51);
        createStatement();
        break;
      }

      case SimpleSqlParser::DELETE: {
        _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<SimpleSqlParser::DeleteValueStatementContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(52);
        deleteStatement();
        break;
      }

      case SimpleSqlParser::INSERT: {
        _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<SimpleSqlParser::InsertValueStatementContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(53);
        insertStatement();
        break;
      }

      case SimpleSqlParser::SELECT: {
        _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<SimpleSqlParser::QueryStatementContext>(_localctx));
        enterOuterAlt(_localctx, 4);
        setState(54);
        selectStatement();
        break;
      }

      case SimpleSqlParser::COPY: {
        _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<SimpleSqlParser::CopyFileStatementContext>(_localctx));
        enterOuterAlt(_localctx, 5);
        setState(55);
        copyStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateStatementContext ------------------------------------------------------------------

SimpleSqlParser::CreateStatementContext::CreateStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSqlParser::CreateStatementContext::CREATE() {
  return getToken(SimpleSqlParser::CREATE, 0);
}

tree::TerminalNode* SimpleSqlParser::CreateStatementContext::TABLE() {
  return getToken(SimpleSqlParser::TABLE, 0);
}

std::vector<SimpleSqlParser::IdentifierContext *> SimpleSqlParser::CreateStatementContext::identifier() {
  return getRuleContexts<SimpleSqlParser::IdentifierContext>();
}

SimpleSqlParser::IdentifierContext* SimpleSqlParser::CreateStatementContext::identifier(size_t i) {
  return getRuleContext<SimpleSqlParser::IdentifierContext>(i);
}

std::vector<SimpleSqlParser::DataTypeContext *> SimpleSqlParser::CreateStatementContext::dataType() {
  return getRuleContexts<SimpleSqlParser::DataTypeContext>();
}

SimpleSqlParser::DataTypeContext* SimpleSqlParser::CreateStatementContext::dataType(size_t i) {
  return getRuleContext<SimpleSqlParser::DataTypeContext>(i);
}

SimpleSqlParser::TableIdentifierContext* SimpleSqlParser::CreateStatementContext::tableIdentifier() {
  return getRuleContext<SimpleSqlParser::TableIdentifierContext>(0);
}

SimpleSqlParser::IndexClauseContext* SimpleSqlParser::CreateStatementContext::indexClause() {
  return getRuleContext<SimpleSqlParser::IndexClauseContext>(0);
}


size_t SimpleSqlParser::CreateStatementContext::getRuleIndex() const {
  return SimpleSqlParser::RuleCreateStatement;
}


antlrcpp::Any SimpleSqlParser::CreateStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitCreateStatement(this);
  else
    return visitor->visitChildren(this);
}

SimpleSqlParser::CreateStatementContext* SimpleSqlParser::createStatement() {
  CreateStatementContext *_localctx = _tracker.createInstance<CreateStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, SimpleSqlParser::RuleCreateStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(SimpleSqlParser::CREATE);
    setState(59);
    match(SimpleSqlParser::TABLE);
    setState(60);
    dynamic_cast<CreateStatementContext *>(_localctx)->tablenName = tableIdentifier();
    setState(61);
    match(SimpleSqlParser::T__0);
    setState(62);
    identifier();
    setState(63);
    dataType();
    setState(70);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SimpleSqlParser::T__1) {
      setState(64);
      match(SimpleSqlParser::T__1);
      setState(65);
      identifier();
      setState(66);
      dataType();
      setState(72);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(73);
    match(SimpleSqlParser::T__2);
    setState(75);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::INDEX) {
      setState(74);
      indexClause();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IndexClauseContext ------------------------------------------------------------------

SimpleSqlParser::IndexClauseContext::IndexClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSqlParser::IndexClauseContext::INDEX() {
  return getToken(SimpleSqlParser::INDEX, 0);
}

tree::TerminalNode* SimpleSqlParser::IndexClauseContext::ON() {
  return getToken(SimpleSqlParser::ON, 0);
}

std::vector<SimpleSqlParser::IdentifierContext *> SimpleSqlParser::IndexClauseContext::identifier() {
  return getRuleContexts<SimpleSqlParser::IdentifierContext>();
}

SimpleSqlParser::IdentifierContext* SimpleSqlParser::IndexClauseContext::identifier(size_t i) {
  return getRuleContext<SimpleSqlParser::IdentifierContext>(i);
}


size_t SimpleSqlParser::IndexClauseContext::getRuleIndex() const {
  return SimpleSqlParser::RuleIndexClause;
}


antlrcpp::Any SimpleSqlParser::IndexClauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitIndexClause(this);
  else
    return visitor->visitChildren(this);
}

SimpleSqlParser::IndexClauseContext* SimpleSqlParser::indexClause() {
  IndexClauseContext *_localctx = _tracker.createInstance<IndexClauseContext>(_ctx, getState());
  enterRule(_localctx, 6, SimpleSqlParser::RuleIndexClause);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(SimpleSqlParser::INDEX);
    setState(78);
    match(SimpleSqlParser::ON);
    setState(79);
    match(SimpleSqlParser::T__0);
    setState(80);
    identifier();
    setState(85);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SimpleSqlParser::T__1) {
      setState(81);
      match(SimpleSqlParser::T__1);
      setState(82);
      identifier();
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(88);
    match(SimpleSqlParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeleteStatementContext ------------------------------------------------------------------

SimpleSqlParser::DeleteStatementContext::DeleteStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSqlParser::DeleteStatementContext::DELETE() {
  return getToken(SimpleSqlParser::DELETE, 0);
}

tree::TerminalNode* SimpleSqlParser::DeleteStatementContext::FROM() {
  return getToken(SimpleSqlParser::FROM, 0);
}

SimpleSqlParser::TableIdentifierContext* SimpleSqlParser::DeleteStatementContext::tableIdentifier() {
  return getRuleContext<SimpleSqlParser::TableIdentifierContext>(0);
}

SimpleSqlParser::WhereCluseContext* SimpleSqlParser::DeleteStatementContext::whereCluse() {
  return getRuleContext<SimpleSqlParser::WhereCluseContext>(0);
}


size_t SimpleSqlParser::DeleteStatementContext::getRuleIndex() const {
  return SimpleSqlParser::RuleDeleteStatement;
}


antlrcpp::Any SimpleSqlParser::DeleteStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitDeleteStatement(this);
  else
    return visitor->visitChildren(this);
}

SimpleSqlParser::DeleteStatementContext* SimpleSqlParser::deleteStatement() {
  DeleteStatementContext *_localctx = _tracker.createInstance<DeleteStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, SimpleSqlParser::RuleDeleteStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(SimpleSqlParser::DELETE);
    setState(91);
    match(SimpleSqlParser::FROM);
    setState(92);
    dynamic_cast<DeleteStatementContext *>(_localctx)->tablenName = tableIdentifier();
    setState(94);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::WHERE) {
      setState(93);
      whereCluse();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertStatementContext ------------------------------------------------------------------

SimpleSqlParser::InsertStatementContext::InsertStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSqlParser::InsertStatementContext::INSERT() {
  return getToken(SimpleSqlParser::INSERT, 0);
}

tree::TerminalNode* SimpleSqlParser::InsertStatementContext::INTO() {
  return getToken(SimpleSqlParser::INTO, 0);
}

tree::TerminalNode* SimpleSqlParser::InsertStatementContext::VALUES() {
  return getToken(SimpleSqlParser::VALUES, 0);
}

std::vector<SimpleSqlParser::ExpressionContext *> SimpleSqlParser::InsertStatementContext::expression() {
  return getRuleContexts<SimpleSqlParser::ExpressionContext>();
}

SimpleSqlParser::ExpressionContext* SimpleSqlParser::InsertStatementContext::expression(size_t i) {
  return getRuleContext<SimpleSqlParser::ExpressionContext>(i);
}

SimpleSqlParser::TableIdentifierContext* SimpleSqlParser::InsertStatementContext::tableIdentifier() {
  return getRuleContext<SimpleSqlParser::TableIdentifierContext>(0);
}


size_t SimpleSqlParser::InsertStatementContext::getRuleIndex() const {
  return SimpleSqlParser::RuleInsertStatement;
}


antlrcpp::Any SimpleSqlParser::InsertStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitInsertStatement(this);
  else
    return visitor->visitChildren(this);
}

SimpleSqlParser::InsertStatementContext* SimpleSqlParser::insertStatement() {
  InsertStatementContext *_localctx = _tracker.createInstance<InsertStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, SimpleSqlParser::RuleInsertStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(SimpleSqlParser::INSERT);
    setState(97);
    match(SimpleSqlParser::INTO);
    setState(98);
    dynamic_cast<InsertStatementContext *>(_localctx)->tableName = tableIdentifier();
    setState(99);
    match(SimpleSqlParser::VALUES);
    setState(100);
    match(SimpleSqlParser::T__0);
    setState(101);
    expression();
    setState(106);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SimpleSqlParser::T__1) {
      setState(102);
      match(SimpleSqlParser::T__1);
      setState(103);
      expression();
      setState(108);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(109);
    match(SimpleSqlParser::T__2);
    setState(123);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SimpleSqlParser::T__3) {
      setState(110);
      match(SimpleSqlParser::T__3);
      setState(111);
      expression();
      setState(116);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == SimpleSqlParser::T__1) {
        setState(112);
        match(SimpleSqlParser::T__1);
        setState(113);
        expression();
        setState(118);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(119);
      match(SimpleSqlParser::T__2);
      setState(125);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CopyStatementContext ------------------------------------------------------------------

SimpleSqlParser::CopyStatementContext::CopyStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSqlParser::CopyStatementContext::COPY() {
  return getToken(SimpleSqlParser::COPY, 0);
}

tree::TerminalNode* SimpleSqlParser::CopyStatementContext::FROM() {
  return getToken(SimpleSqlParser::FROM, 0);
}

tree::TerminalNode* SimpleSqlParser::CopyStatementContext::DELIMITER() {
  return getToken(SimpleSqlParser::DELIMITER, 0);
}

tree::TerminalNode* SimpleSqlParser::CopyStatementContext::CSV() {
  return getToken(SimpleSqlParser::CSV, 0);
}

SimpleSqlParser::TableIdentifierContext* SimpleSqlParser::CopyStatementContext::tableIdentifier() {
  return getRuleContext<SimpleSqlParser::TableIdentifierContext>(0);
}

std::vector<tree::TerminalNode *> SimpleSqlParser::CopyStatementContext::STRING() {
  return getTokens(SimpleSqlParser::STRING);
}

tree::TerminalNode* SimpleSqlParser::CopyStatementContext::STRING(size_t i) {
  return getToken(SimpleSqlParser::STRING, i);
}

tree::TerminalNode* SimpleSqlParser::CopyStatementContext::HEADER() {
  return getToken(SimpleSqlParser::HEADER, 0);
}


size_t SimpleSqlParser::CopyStatementContext::getRuleIndex() const {
  return SimpleSqlParser::RuleCopyStatement;
}


antlrcpp::Any SimpleSqlParser::CopyStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitCopyStatement(this);
  else
    return visitor->visitChildren(this);
}

SimpleSqlParser::CopyStatementContext* SimpleSqlParser::copyStatement() {
  CopyStatementContext *_localctx = _tracker.createInstance<CopyStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, SimpleSqlParser::RuleCopyStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    match(SimpleSqlParser::COPY);
    setState(127);
    dynamic_cast<CopyStatementContext *>(_localctx)->tableName = tableIdentifier();
    setState(128);
    match(SimpleSqlParser::FROM);
    setState(129);
    dynamic_cast<CopyStatementContext *>(_localctx)->fileName = match(SimpleSqlParser::STRING);
    setState(130);
    match(SimpleSqlParser::DELIMITER);
    setState(131);
    dynamic_cast<CopyStatementContext *>(_localctx)->delimiter = match(SimpleSqlParser::STRING);
    setState(132);
    match(SimpleSqlParser::CSV);
    setState(134);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::HEADER) {
      setState(133);
      match(SimpleSqlParser::HEADER);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectStatementContext ------------------------------------------------------------------

SimpleSqlParser::SelectStatementContext::SelectStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleSqlParser::SelectClauseContext* SimpleSqlParser::SelectStatementContext::selectClause() {
  return getRuleContext<SimpleSqlParser::SelectClauseContext>(0);
}

SimpleSqlParser::FromCluseContext* SimpleSqlParser::SelectStatementContext::fromCluse() {
  return getRuleContext<SimpleSqlParser::FromCluseContext>(0);
}

SimpleSqlParser::WhereCluseContext* SimpleSqlParser::SelectStatementContext::whereCluse() {
  return getRuleContext<SimpleSqlParser::WhereCluseContext>(0);
}


size_t SimpleSqlParser::SelectStatementContext::getRuleIndex() const {
  return SimpleSqlParser::RuleSelectStatement;
}


antlrcpp::Any SimpleSqlParser::SelectStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitSelectStatement(this);
  else
    return visitor->visitChildren(this);
}

SimpleSqlParser::SelectStatementContext* SimpleSqlParser::selectStatement() {
  SelectStatementContext *_localctx = _tracker.createInstance<SelectStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, SimpleSqlParser::RuleSelectStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(136);
    selectClause();
    setState(137);
    fromCluse();
    setState(139);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::WHERE) {
      setState(138);
      whereCluse();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectClauseContext ------------------------------------------------------------------

SimpleSqlParser::SelectClauseContext::SelectClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSqlParser::SelectClauseContext::SELECT() {
  return getToken(SimpleSqlParser::SELECT, 0);
}

std::vector<SimpleSqlParser::ExpressionContext *> SimpleSqlParser::SelectClauseContext::expression() {
  return getRuleContexts<SimpleSqlParser::ExpressionContext>();
}

SimpleSqlParser::ExpressionContext* SimpleSqlParser::SelectClauseContext::expression(size_t i) {
  return getRuleContext<SimpleSqlParser::ExpressionContext>(i);
}


size_t SimpleSqlParser::SelectClauseContext::getRuleIndex() const {
  return SimpleSqlParser::RuleSelectClause;
}


antlrcpp::Any SimpleSqlParser::SelectClauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitSelectClause(this);
  else
    return visitor->visitChildren(this);
}

SimpleSqlParser::SelectClauseContext* SimpleSqlParser::selectClause() {
  SelectClauseContext *_localctx = _tracker.createInstance<SelectClauseContext>(_ctx, getState());
  enterRule(_localctx, 16, SimpleSqlParser::RuleSelectClause);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(141);
    match(SimpleSqlParser::SELECT);
    setState(142);
    expression();
    setState(147);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SimpleSqlParser::T__1) {
      setState(143);
      match(SimpleSqlParser::T__1);
      setState(144);
      expression();
      setState(149);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FromCluseContext ------------------------------------------------------------------

SimpleSqlParser::FromCluseContext::FromCluseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSqlParser::FromCluseContext::FROM() {
  return getToken(SimpleSqlParser::FROM, 0);
}

std::vector<SimpleSqlParser::TableIdentifierContext *> SimpleSqlParser::FromCluseContext::tableIdentifier() {
  return getRuleContexts<SimpleSqlParser::TableIdentifierContext>();
}

SimpleSqlParser::TableIdentifierContext* SimpleSqlParser::FromCluseContext::tableIdentifier(size_t i) {
  return getRuleContext<SimpleSqlParser::TableIdentifierContext>(i);
}


size_t SimpleSqlParser::FromCluseContext::getRuleIndex() const {
  return SimpleSqlParser::RuleFromCluse;
}


antlrcpp::Any SimpleSqlParser::FromCluseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleSqlVisitor*>(visitor))
    return parserVisitor->visitFromCluse(this);
  else
    return visitor->visitChildren(this);
}

SimpleSqlParser::FromCluseContext* SimpleSqlParser::fromCluse() {
  FromCluseContext *_localctx = _tracker.createInstance<FromCluseContext>(_ctx, getState());
  enterRule(_localctx, 18, SimpleSqlParser::RuleFromCluse);
  size_t _la = 0;
